16.apr (ws)
      - fix #5398: Customized beam does not persist after save
15.apr (ws)
      - fix #5382: Crash with frames and two lines score
      - fix #5330: Frame crash multi-measure rest
14.apr (la)
      - fix #5373 : Drum notation not working
13.apr (la)
      - upgrade About box to the new style
      - update File menu icons
      - default score background color to white
12.apr (la)
      - fix #5303 MusicXML import/export of "none" text for <bar-style> element
      (db)
      - notation fixes to promenade demo for slurs and dot (by craig)
11.apr (ws)
      - fix #5196: First note entered is ignored if no duration selected
      - fix #5204: The offsets of tempo changes get calculated without
        regard to repeats when exporting midi files
      - fix #5289: Multi-measure rest number does not resize with scaling
8.apr (la)
      - add a minimal infrastructure to translate plugins
7.apr (ws)
      - extended script registration: scripts can now register actions and have
        access to the main application window to extend the menu structure.
6.apr (la)
      - handle MIDI IN for special drumkits (patch by Jason Essington)
      - fix #5227: Shortcuts Are Listed From Z-A
      - fix #5180: Copy paste of Chordnames gives uncoherent result
5.apr (ws)
      - fix #5220: Crash when inserting note at end
      - fix #5195: Copy paste disables playback
      - fix #5205: bad matching in "Notehead" in note properties
      (la)
      - Add pageFormat object in plugin framework
      - small patch for Snow Leopard build
      - Synth dialog changed to modal
4.apr (ws)
      - Modified portaudio exit code. Maybe this fixes problems when exiting
        mscore.
      - fix #5189: Corrupted custom beam depending on the platform. The fix
        involves a change in the *.msc[xz] format. Version number increased
        to 1.14.
3.apr (la)
      - add enum for arpeggio types
      - add support for up to down arpeggio (patch from Aaron Epstein)